--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: "Impact";
+  src: url("./fonts/impact.woff"), url("./fonts/Impacted.woff");
+  background-color: #2c4762;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Impact";
+  -webkit-text-stroke-width: 2.5px;
+  -webkit-text-stroke-color: black;
+  letter-spacing: 2px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
