:sparkles: add: slider

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -9,6 +9,7 @@
   background-color: white;
   flex: 50%;
   height: 2rem;
+  cursor: pointer;
 }
 
 .navbar {
@@ -52,6 +53,8 @@
 
 .topbar h1 {
   font-size: 20px;
+  margin-left: 5rem;
+  margin-right: 5rem;
   text-align: center;
   -webkit-text-stroke-width: 1px;
   color: #3c6185;
