:iphone: fix: responsiveness

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,35 +1,55 @@
 .footer {
   display: flex;
-  flex-direction: row;
+  padding: 0 1rem;
   margin-top: 20px;
-  padding: 40px;
+  flex-direction: column;
 }
 
 .left {
-  flex: 50%;
   display: flex;
-  align-items: center;
   font-size: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .right {
-  flex: 50%;
+  gap: 1rem;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
   align-items: center;
-  padding-right: 6rem;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .copyright {
-  padding-left: 6rem;
   -webkit-text-stroke-width: 1px;
-}
-
-.socials {
-  margin-right: 15px;
 }
 
 .social-logo {
   width: 40px;
+}
+
+@media screen and (min-width: 600px) {
+  .footer {
+    padding: 40px;
+    flex-direction: row;
+  }
+  
+  .copyright {
+    padding-left: 6rem;
+  }
+  
+  .right {
+    flex: 50%;
+    padding-right: 6rem;
+    justify-content: flex-end;
+  }
+
+  .left {
+    flex: 50%;
+    padding-right: 6rem;
+  }
+
+  .socials {
+    margin-right: 15px;
+  }
 }
