--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -16,6 +16,7 @@
   flex: 50%;
   height: 4rem;
   display: flex;
+  align-items: center;
   flex-direction: row;
 }
 
@@ -24,7 +25,6 @@
   height: 100%;
   display: flex;
   align-items: center;
-  padding-left: 6rem;
 }
 
 .left-side img {
@@ -33,7 +33,7 @@
 
 .right-side {
   flex: 70%;
-  display: flex;
+  display: none;
   align-items: center;
   align-content: center;
   justify-content: flex-end;
@@ -58,4 +58,44 @@
   text-align: center;
   -webkit-text-stroke-width: 1px;
   color: #3c6185;
+}
+
+.burger {
+  flex: 70%;
+  display: flex;
+  position: relative;
+}
+
+.menu {
+  inset: 0;
+  display: flex;
+  padding: 4rem;
+  position: fixed;
+  background: #3c6185;
+  flex-direction: column;
+}
+
+.close-button {
+  top: 1rem;
+  right: 1rem;
+  position: absolute;
+}
+
+.menu a {
+  padding: 1rem;
+  margin-right: 0;
+}
+
+@media screen and (min-width: 600px) {
+  .left-side {
+    padding-left: 6rem;
+  }
+
+  .right-side {
+    display: flex;
+  }
+
+  .burger {
+    display: none;
+  }
 }
