--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,21 +1,36 @@
 .about {
+  margin: 0;
   width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
   margin-bottom: 20px;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .about img {
-  width: 30%;
   margin-top: 20px;
+  width: calc(100% - 4rem);
 }
 
 .about p {
-  text-transform: uppercase;
   font-size: 25px;
-  width: 30%;
-  text-align: center;
   line-height: 40px;
+  text-align: center;
+  width: calc(100% - 4rem);
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 600px) {
+  .about {
+    flex-direction: row;
+  }
+
+  .about p {
+    width: 30%;
+  }
+  
+  .about img {
+    width: 30%;
+  }
 }
