--- a/src/styles/Tokenomics.css
+++ b/src/styles/Tokenomics.css
@@ -1,10 +1,10 @@
 .tokenomics {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
   margin-bottom: 20px;
+  justify-content: space-evenly;
+  flex-direction: column-reverse;
 }
 
 .tokenomics ul {
@@ -18,10 +18,20 @@
 }
 
 .logo {
-  width: 30%;
+  width: 100%;
   margin-top: 20px;
 }
 
 .icons {
   width: 30px;
+}
+
+@media screen and (min-width: 600px) {
+  .tokenomics {
+    flex-direction: row;
+  }
+
+  .logo {
+    width: 30%;
+  }
 }
