--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 0 1rem;
   margin-top: 20px;
+  margin-bottom: 20px;
   flex-direction: column;
 }
 
@@ -33,11 +34,11 @@
     padding: 40px;
     flex-direction: row;
   }
-  
+
   .copyright {
     padding-left: 6rem;
   }
-  
+
   .right {
     flex: 50%;
     padding-right: 6rem;
