--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,43 @@
+@font-face {
+  font-family: "Kocheng";
+  src: url("./fonts/kocheng.ttf") format("truetype");
+}
+
 * {
-  box-shadow: border-box;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Kocheng", sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  letter-spacing: 1px;
+  color: white;
 }
 
 .App {
   width: 100%;
-  height: auto;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: "Impact";
-  src: url("./fonts/impact.woff"), url("./fonts/Impacted.woff");
-  background-color: #2c4762;
+  font-family: "Kocheng", sans-serif;
+  background-image: url("./assets/background.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Impact";
-  -webkit-text-stroke-width: 2.5px;
-  -webkit-text-stroke-color: black;
-  letter-spacing: 2px;
-  color: white;
+@media screen and (max-width: 768px) {
+  body {
+    -webkit-text-stroke-width: 0.5px;
+    letter-spacing: 0.5px;
+  }
 }
