--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -3,37 +3,66 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  column-gap: 0px;
-  padding: 5rem 0;
+  padding: 2rem;
+  text-align: center;
+}
+
+.home h1 {
+  font-size: 5vw;
+  margin-bottom: 1rem;
+}
+
+.home h2 {
+  font-size: 2.5vw;
+  line-break: anywhere;
+  word-wrap: break-word;
+  max-width: 100%;
+  margin-bottom: 1rem;
 }
 
 .home h3 {
-  color: #3c6185;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: black;
-  font-size: 24px;
-  line-height: 40px;
+  font-size: 2.5vw;
+  text-align: center;
+  margin-top: 1rem;
 }
 
-.main-title {
-  font-size: 114px;
-  -webkit-text-stroke-width: 4px;
+.logo-video {
+  width: 20%;
+  max-width: 300px;
+  border: 5px solid white;
+  border-radius: 50%;
 }
 
-.home img {
-  width: 50%;
-}
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .home {
-    padding: 5rem 0;
+    padding: 1rem;
+  }
+
+  .home h1 {
+    font-size: 8vw;
+  }
+
+  .home h2,
+  .home h3 {
+    font-size: 4vw;
   }
 
   .home img {
-    width: 80%;
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .home h1 {
+    font-size: 10vw;
   }
 
-  .main-title {
-    font-size: 45px;
+  .home h2,
+  .home h3 {
+    font-size: 5vw;
+  }
+
+  .logo-video {
+    width: 50%;
   }
 }
